[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solarres-sr"
version = "0.1.0"
description = "Solar image super-resolution training and benchmarking suite."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.7.1",
    "torchvision==0.22.1",
    "timm>=1.0.0",
    "torchmetrics>=0.11.0",
    "numpy>=1.23.0",
    "opencv-python>=4.6.0",
    "matplotlib>=3.5.0",
    "tqdm>=4.64.0",
    "scipy>=1.9.0",
    "pytorch-msssim>=1.0.0",
    "Pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
include = ["solarres_sr*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"
